; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_r8169.c_rtl_hw_start.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_r8169.c_rtl_hw_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.rtl8169_private = type { i32 (%struct.net_device.0*)* }
%struct.net_device.0 = type opaque

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*)* @rtl_hw_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtl_hw_start(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.rtl8169_private*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = call %struct.rtl8169_private* @netdev_priv(%struct.net_device* %4)
  store %struct.rtl8169_private* %5, %struct.rtl8169_private** %3, align 8
  %6 = load %struct.rtl8169_private*, %struct.rtl8169_private** %3, align 8
  %7 = getelementptr inbounds %struct.rtl8169_private, %struct.rtl8169_private* %6, i32 0, i32 0
  %8 = load i32 (%struct.net_device.0*)*, i32 (%struct.net_device.0*)** %7, align 8
  %9 = load %struct.net_device*, %struct.net_device** %2, align 8
  %10 = bitcast %struct.net_device* %9 to %struct.net_device.0*
  %11 = call i32 %8(%struct.net_device.0* %10)
  %12 = load %struct.rtl8169_private*, %struct.rtl8169_private** %3, align 8
  %13 = call i32 @rtl_irq_enable_all(%struct.rtl8169_private* %12)
  ret void
}

declare dso_local %struct.rtl8169_private* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @rtl_irq_enable_all(%struct.rtl8169_private*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
